# fixtable

./: MANIFEST  README.md  XX.tex  XX.txt  license.txt  pyproject.toml  setup.py  table.tex
fixtable/: __init__.py  fixtable  fixtable.py  utils.py
fixtable.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
