[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fixtable"
version = "0.6"
description = "A command-line tool to process and format Stata output tables."
license = {text = "MIT"}
authors = [
    {name = "Leo Liu", email = "auleo.liu@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.7"
keywords = ["stata", "table", "formatting", "command-line"]

dependencies = [
    "loguru",
    "latex_table@git+https://github.com/leoliu0/latex_table"
]

[project.scripts]
fixtable = "fixtable:main"
